# openverse_test_framework

./: LICENSE  README.md  pyproject.toml
docs/: Openverse API (v1).yaml  Openverse API.postman_collection.json  auth_request_response.json
tests/features/: audio.feature  authentication.feature
tests/step_defs/: config.yaml  conftest.py  test_audio.py  test_authentication.py
tests/step_defs/utils/: api_info.py  users.py
